@@ -13,7 +13,7 @@ GBFRTF::GBFRTF() {
 }
 
 
-char GBFRTF::ProcessText(char *text, int maxlen)
+char GBFRTF::ProcessText(char *text, int maxlen, const SWKey *key)
 {
 	char *to, *from, token[2048];
 	int tokpos = 0;
